zookeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 2181
    targetPort: 2181
    protocol: TCP
    name: zookeeper
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http2
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: kafka
